--- a/app/src/main/res/layout/item_image.xml
+++ b/app/src/main/res/layout/item_image.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -7,5 +7,21 @@
         android:id="@+id/imageView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:scaleType="centerCrop"/>
-</RelativeLayout>
+        android:scaleType="centerCrop">
+
+    </ImageView>
+
+
+    <ImageView
+        android:id="@+id/imageViewPager"
+        android:layout_width="match_parent"
+        android:layout_height="450dp"
+        android:background="@drawable/rounded_frame"
+        android:layout_gravity="center"
+        android:layout_marginBottom="30dp"
+        />
+
+
+
+
+</FrameLayout>
