--- a/app/src/main/res/drawable/rounded_frame.xml
+++ b/app/src/main/res/drawable/rounded_frame.xml
@@ -1,6 +1,6 @@
 <!-- res/drawable/rounded_frame.xml -->
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@android:color/white"/>
+    <solid android:color="#A52C2C"/>
     <corners android:radius="100dp"/>
 <!--    <stroke android:color="@android:color/black" android:width="4dp"/>-->
 </shape>
