--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -3,41 +3,40 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    tools:context=".UI.Home.FragmentOfHome.ChatFragment"
+    tools:context=".UI.Chat.FragnentOfChat.ChatFragment"
     android:background="@android:color/black">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="80dp"
 
-        android:orientation="horizontal"
-        android:paddingTop="30dp"
-        >
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@android:drawable/ic_delete"
-            android:layout_marginStart="10dp"
-            />
+    <androidx.appcompat.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/black"
+        app:logo="@drawable/baseline_arrow_back_ios_setting"
+        android:padding="4dp"
+        android:layout_marginTop="25dp">
 
         <TextView
+            android:id="@+id/toolbar_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Tin nhắn"
-            android:textColor="@color/white"
+            android:textColor="@android:color/white"
+            android:textSize="20sp"
             android:textStyle="bold"
-            android:textSize="25dp"
-            android:layout_marginStart="120dp"/>
+            android:layout_gravity="center"
+            android:fontFamily="@font/fonttext"            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"/>
+
+    </androidx.appcompat.widget.Toolbar>
 
 
 
-
-
-    </LinearLayout>
 
 
     <androidx.recyclerview.widget.RecyclerView
+        android:layout_marginTop="20dp"
         android:id="@+id/recyclerViewHome"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
