--- a/app/src/main/res/layout/viewpager_img.xml
+++ b/app/src/main/res/layout/viewpager_img.xml
@@ -2,20 +2,25 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:background="@android:color/black"
+    android:background="@color/white"
     android:layout_height="match_parent">
 
+
+
+
+
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/img_backgroundView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:scaleType="centerCrop"
-         />
+        android:scaleType="centerCrop"/>
 
-    <androidx.viewpager2.widget.ViewPager2
-        android:id="@+id/viewPager2"
+
+    <View
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:background="#000000"
+        android:alpha="0.8" />
 
     <LinearLayout
         android:layout_width="match_parent"
