--- a/app/src/main/res/layout/viewpager_takeipc.xml
+++ b/app/src/main/res/layout/viewpager_takeipc.xml
@@ -5,10 +5,8 @@
     android:layout_height="match_parent"
     android:background="#E91E63">
 
-
-
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/takepic_backgroundView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scaleType="centerCrop">
@@ -67,7 +65,7 @@
             android:src="@drawable/baseline_account_circle_24" />
     </LinearLayout>
 
-    <!-- LinearLayout chứa ba ImageButton cố định, đặt ở dưới cùng -->
+    <!-- LinearLa   yout chứa ba ImageButton cố định, đặt ở dưới cùng -->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
