--- a/app/src/main/res/layout/viepager_storage.xml
+++ b/app/src/main/res/layout/viepager_storage.xml
@@ -1,16 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:background="@drawable/back_gr"
+    >
 
-    <!-- ViewPager2 chính cho nền -->
-    <androidx.viewpager2.widget.ViewPager2
-        android:id="@+id/viewPager2"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="#880D0D"/>
+
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -47,19 +43,42 @@
             android:background="?attr/selectableItemBackgroundBorderless"
             android:src="@drawable/baseline_chat_24" />
     </LinearLayout>
-    <!-- LinearLayout chứa ba ImageButton, đặt ở trên cùng -->
+
+
+
+
+
+
+
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:gravity="center"
+        android:padding="16dp"
 
-        android:layout_gravity="top"
-        android:layout_marginTop="30dp">
+        android:layout_marginBottom="20dp"
+        android:layout_gravity="bottom">
+
+
+
+        <com.google.android.material.imageview.ShapeableImageView
+            android:layout_width="52dp"
+            android:layout_height="52dp"
+            android:layout_centerInParent="true"
+            android:scaleType="centerCrop"
+            android:layout_marginHorizontal="120dp"
+            app:strokeColor="#BC910F"
+            app:strokeWidth="4dp"
+            android:padding="4dp"
+
+            app:shapeAppearanceOverlay="@style/TakepicroundedImage"
+            android:layout_gravity="center_horizontal"
+            android:src="@drawable/avta" />
+
 
     </LinearLayout>
-
-
 
 
 
