--- a/app/src/main/res/layout/viewpager_img.xml
+++ b/app/src/main/res/layout/viewpager_img.xml
@@ -2,7 +2,7 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:background="@color/white"
+
     android:layout_height="match_parent">
 
 
@@ -16,11 +16,10 @@
         android:scaleType="centerCrop"/>
 
 
-    <View
+    <com.PicConnect.myapplication.Components.TransparentSquareView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#000000"
-        android:alpha="0.8" />
+        android:layout_gravity="center"/>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -99,7 +98,7 @@
             android:background="?attr/selectableItemBackgroundBorderless" />
     </LinearLayout>
 
-    <!-- Lớp phủ với lỗ tròn chính giữa màn hình -->
+
 
 
 </FrameLayout>
