--- a/app/src/main/res/layout/viewpager_takeipc.xml
+++ b/app/src/main/res/layout/viewpager_takeipc.xml
@@ -14,6 +14,12 @@
     </ImageView>
 
 
+<!--    <ImageView-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="match_parent"-->
+<!--        android:background="@drawable/avta"/>-->
+
+
     <com.PicConnect.myapplication.Components.TransparentSquareView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
