--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -7,10 +7,13 @@
 
     <!-- ViewPager2 chính cho nền -->
     <androidx.viewpager2.widget.ViewPager2
-        android:id="@+id/viewPager2"
+        android:id="@+id/viewPager2_Main"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="#880D0D"/>
+
+
+
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -23,7 +26,7 @@
 
 
         <com.google.android.material.imageview.ShapeableImageView
-            android:id="@+id/imgArtist"
+            android:id="@+id/mAvata"
             android:layout_width="42dp"
             android:layout_height="42dp"
             android:layout_centerInParent="true"
@@ -58,6 +61,8 @@
         android:layout_marginTop="30dp">
 
     </LinearLayout>
+
+
 
 
 
