--- a/app/src/main/res/layout/viewpager_img.xml
+++ b/app/src/main/res/layout/viewpager_img.xml
@@ -78,6 +78,7 @@
             android:background="?attr/selectableItemBackgroundBorderless" />
 
         <com.google.android.material.imageview.ShapeableImageView
+            android:id="@+id/mButtonCallBack"
             android:layout_width="52dp"
             android:layout_height="52dp"
             android:layout_centerInParent="true"
