--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -10,11 +10,9 @@
         android:id="@+id/viewPager2_Main"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#880D0D"/>
+        android:background="#474646"/>
 
-
-
-
+    <!-- LinearLayout chứa ba ImageButton, đặt ở trên cùng -->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -22,8 +20,6 @@
         android:layout_marginTop="30dp"
         android:gravity="center"
         android:orientation="horizontal">
-
-
 
         <com.google.android.material.imageview.ShapeableImageView
             android:id="@+id/mAvata"
@@ -50,23 +46,12 @@
             android:background="?attr/selectableItemBackgroundBorderless"
             android:src="@drawable/baseline_chat_24" />
     </LinearLayout>
-    <!-- LinearLayout chứa ba ImageButton, đặt ở trên cùng -->
-    <LinearLayout
+
+    <!-- FrameLayout để chứa các Fragment -->
+    <FrameLayout
+        android:id="@+id/fragment_container"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:gravity="center"
-
-        android:layout_gravity="top"
-        android:layout_marginTop="30dp">
-
-    </LinearLayout>
-
-
-
-
-
-
-
+        android:layout_height="match_parent"
+        android:layout_gravity="bottom" /> <!-- Đặt vị trí tùy thuộc vào yêu cầu của bạn -->
 
 </FrameLayout>
