--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -102,6 +102,7 @@
 
 
         <LinearLayout
+            android:id="@+id/laypoutLinearFriend"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="20dp"
@@ -128,11 +129,12 @@
                     android:layout_marginStart="15dp"
                     android:layout_weight="1"
                     android:fontFamily="@font/fonttext"
-                    android:text="Sửa ảnh hồ sơ"
+
                     android:textColor="@android:color/white"
                     android:textSize="16sp"
 
 
+                    android:text="Bạn bè"
                     tools:ignore="HardcodedText" />
 
                 <ImageView
@@ -177,6 +179,7 @@
                 android:orientation="vertical">
 
                 <LinearLayout
+                    android:id="@+id/Lin"
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
                     android:layout_marginHorizontal="20dp"
